<resources>
    <string name="app_name">Hey!</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">sign in</string>
    <string name="password">Password</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome">Welcome</string>
    <string name="add_image">Add Image</string>
    <string name="phone">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in_instead">Sign In instead</string>
    <string name="name">Name</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a Message</string>
    <string name="online">Online</string>
    <string name="verify">Verify</string>
    <string name="enter_your_otp_here">Your OTP Here</string>
    <string name="didnt_receive_code">Didn\'t Receive Code?</string>
    <string name="resend_it">Resend It</string>
    <string name="verify_and_sign_up">Verify and Sign Up</string>
    <string name="_91">+91</string>
    <string name="image">Image</string>
    <string name="invite">Invite</string>
    <string name="credits">Credits</string>
    <string name="app_development_rungshit_saha">App Development : Rungshit Saha</string>
    <string name="github_logo">Github Logo</string>
    <string name="linkedin_logo">LinkedIn Logo</string>
    <string name="instagram_logo">Instagram Logo</string>
</resources>